# stonks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example-config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
stonks/: app.py  config.py  db.py  events.py  history.py  portfolio.py  serialize.py  task.py
stonks/collectors/: base.py  euronext.py  finansavisen.py  nordnet.py  simulator.py  yahoo.py
stonks/dashboard/: package-lock.json  package.json
stonks/dashboard/public/: index.html  manifest.json
stonks/dashboard/src/: App.js  Candlesticks.js  Composition.js  DailyClose.js  Feed.js  Forex.js  Header.js  Indices.js  Plot.js  Positions.js  Status.js  Summary.js  index.js  utils.js
stonks/dashboard/src/css/: App.css  Header.css  Positions.css  Summary.css  index.css
