[tool.black]
line-length = 120

[tool.poetry]
name = "stonks"
version = "1.1.16"
description = ""
authors = ["Aleksander S <myth@overflow.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.31"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
